# pipelines-cadunico

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  code_owners.yaml  pyproject.toml
.github/workflows/: cd.yaml  cd_staging.yaml  code-tree-analysis.yaml  lint.yaml
.github/workflows/scripts/: cadunico_update_layout.py  code_tree_analysis.py  register_flows.py
pipelines/: constants.py  custom.py  flows.py
pipelines/cadunico/ingest_raw/: flows.py  tasks.py  utils.py
pipelines/cadunico/ingest_raw_with_version_tables/: flows.py  tasks.py  utils.py
pipelines/exemplo/: __init__.py
pipelines/exemplo/nome_do_objetivo/: flows.py  tasks.py
pipelines/exemplo/teste/: flows.py  tasks.py
pipelines/templates/: constants.py
pipelines/templates/run_dbt_model/: flows.py  tasks.py
pipelines/utils/: __init__.py  bd.py  dbt.py  env.py  gcs.py  infisical.py  io.py  prefect.py  state_handlers.py  utils.py
queries/: dbt_project.yml  profiles.yml
queries/models/protecao_socal_cadunico_dashboard/: infraestrutura_banheiro.sql  infraestrutura_comodos_faixa_renda.sql  infraestrutura_destino_lixo.sql  infraestrutura_iluminacao copy.sql  infraestrutura_iluminacao.sql  infraestrutura_pavmentacao.sql  infraestrutura_piso_material.sql  infraestrutura_revestimento_parede.sql  infraestrutura_saneamento_basico.sql  numero_familia_faixa_renda.sql  numero_familia_faixa_renda_despesas.sql  numero_familia_quilombola_indigena.sql  numero_familias.sql  numero_pessoas_faixa_etaria.sql  porcentagem_mulheres_responsavel_familia.sql  trabalho_remuneracao.sql  (+4 more)
scripts/: lint.py
(+546 files in other folders)
